<resources>
    <string name="app_name">Lease Tracker</string>
    <string name="title">Lease Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="allowance_text">Allowance</string>
    <string name="expected_text">Expected end mileage:\n</string>
    <string name="start_date">Start date:</string>
    <string name="start_date_hint">MM/DD/YYYY</string>
    <string name="term_text">Lease term (months):</string>
    <string name="miles_delivered">Miles at delivery:</string>
    <string name="miles_allowed">Miles allowed per year:</string>
    <string name="overage_charge">Excess miles charge:</string>
    <string name="submit">Submit</string>
    <string name="banner_ad_unit_id">ca-app-pub-0901264276522907/5307382145</string>
</resources>
